# MultiRobot-ROS2-CoppeliaSim

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py  ur_coppeliasim.xml
.github/workflows/: main.yml
config/: multi_robot_controllers copy.yaml  multi_robot_controllers.yaml  test_controllers.yaml  ur_controllers_coppelia.yaml
config/ur3e/: visual_parameters.yaml
hardware/: HWInterface.cpp
hardware/include/ur_coppeliasim/: HWInterface.hpp
launch/: multi_robot.launch.py  pc2_coppeliasim.launch.py  ur_coppelia_controllers.launch.py
rviz/: robot.rviz
urdf/: ur.ros2_control.xacro  ur.urdf.xacro  ur_macro.xacro
